# zt-sdk-c

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  zt.pc.in
.github/workflows/: build-release.yml  cmake.yml  mattermost-ziti-webhook.yml  mattermost-zt-webhook.yml
cmake/: variables.cmake
examples/: hanzo_auth.c
inc_internal/: auth_method.h  auth_queries.h  authenticators.h  buffer.h  connect.h  deadline.h  ext_oidc.h  internal_model.h  metrics.h  oidc.h  posture.h  utils.h  zt_ctrl.h  zt_internal.h
includes/ziti/: ziti.h
includes/zt/: enroll.h  enums.h  errors.h  zt.h  zt_buffer.h  zt_events.h  zt_log.h  zt_model.h  zt_src.h  zt_zap.h  ztlib.h
programs/: CMakeLists.txt
programs/auth-samples/: CMakeLists.txt  jwt_auth.cpp  zt_mfa.cpp
programs/host-proxy/: CMakeLists.txt  host-proxy.c
programs/sample-bridge/: CMakeLists.txt  zt-fd-client.c  zt-ncat.c
programs/sample-host/: CMakeLists.txt  sample-host.c
programs/sample_enroll/: CMakeLists.txt  sample_enroll.c
programs/sample_http_link/: CMakeLists.txt  README.md  sample_http_link.c
programs/sample_wttr/: CMakeLists.txt  sample_wttr.c
programs/wzcat/: CMakeLists.txt  zt_ws.c
programs/zt-prox-c/: CMakeLists.txt  main.cpp  proxy.c  proxy.h
programs/ztlib-samples/: CMakeLists.txt  common.h  server.c  zt-http-get.c
tests/: CMakeLists.txt  collections_tests.cpp  enum_tests.cpp  message_tests.cpp  model_tests.cpp  test_jwt.cpp  test_metrics.cpp  test_zt_model.cpp  util_tests.cpp  zt_src_tests.cpp  ztlib-tests.cpp
tests/integ/: CMakeLists.txt  bootstrap.exp  ctrl_tests.cpp  (+6 more)
(+1 files in other folders)
