
find_package(CLI11 CONFIG REQUIRED)

add_subdirectory(zt-prox-c)
add_subdirectory(host-proxy)

add_subdirectory(sample_wttr)
add_subdirectory(sample_http_link)
add_subdirectory(sample-host)
add_subdirectory(sample_enroll)
add_subdirectory(wzcat)

add_subdirectory(sample-bridge)

add_subdirectory(ztlib-samples)

add_subdirectory(auth-samples)
